--- a/src/components/Companies/CompanyDyes/CompanyDyes.module.css
+++ b/src/components/Companies/CompanyDyes/CompanyDyes.module.css
@@ -1,4 +1,4 @@
-.companyName {
+.companyNameContainer {
   position: sticky;
   top: 0;
 }
